--- a/week-1-html-css-js/day-4-day-5/styles.css
+++ b/week-1-html-css-js/day-4-day-5/styles.css
@@ -81,6 +81,14 @@
     margin: auto;
 }
 
+.intro-section-text {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
 .intro-section-heading {
     font-size: 81px;
     font-weight: 605;
@@ -122,12 +130,7 @@
     font-style: oblique;
 }
 
-.intro-section-text {
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
+
 
 .trusted-by-teams {
     display: flex;
@@ -147,7 +150,7 @@
     flex-flow: column-reverse;
 }
 
-.intro-section-2{
+.intro-section-2 {
     display: flex;
     margin: auto;
     justify-content: center;
@@ -156,28 +159,28 @@
 
 }
 
-.intro-section-2-img{
+.intro-section-2-img {
     border: 2px solid #dededb;
     border-radius: 12px;
 }
 
-.intro-section-3-container{
+.intro-section-3-container {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    gap:20px;
-    margin-top: 20px    ;
+    gap: 20px;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
 
-.intro-section-3{
+.intro-section-3 {
     display: flex;
     gap: 2px;
     text-align: center;
     align-items: center;
     justify-content: center;
-    border:1px solid #dededb;
+    border: 1px solid #dededb;
     padding: 10px 12px 10px 12px;
     border-radius: 12px;
     -webkit-border-radius: 12px;
@@ -186,69 +189,73 @@
     -o-border-radius: 12px;
 }
 
-.intro-section-3:hover{
+.intro-section-3:hover {
     background-color: #f3f3f3;
 
 }
 
-.example-of-work{
+.example-of-work {
     display: flex;
+    flex-direction: column;
     margin: auto;
-    justify-content:space-between;
+    justify-content: space-between;
     margin-top: 100px;
     width: 80%;
     align-items: center;
+    gap: 20px;
 }
 
-.example-of-work-text{
+.example-of-work-text {
     display: flex;
     flex-direction: column;
     gap: 20px;
     width: 30%;
 }
-.example-of-work-video-container{
+
+.example-of-work-video-container {
     display: flex;
     width: 50%;
-    gap:20px
-    
+    gap: 20px
 }
 
-.example-of-work-video{
-    width:"100px";
+.example-of-work-video {
+    width: "100px";
 }
-.example-of-work-video-text{
+
+.example-of-work-video-text {
     color: #a49f98;
     font-size: 18px;
     font-weight: 600;
-} 
-.example-of-work-video-para{
+}
+
+.example-of-work-video-para {
     color: #a49f98;
     font-size: 18px;
-} 
+}
 
-.example-of-work-heading{
+.example-of-work-heading {
     font-size: 60px;
     font-weight: 605;
     letter-spacing: -.04em;
     line-height: 95%;
     margin-top: 48px;
-    color:gray
+    color: gray
 }
 
-.example-of-work-para{
+.example-of-work-para {
     font-size: 22px;
     line-height: 33px;
     font-style: oblique;
-    color:gray
+    color: gray
 }
 
-.example-of-work-link{
+.example-of-work-link {
     color: gray;
     font-weight: 600;
     font-size: 19px;
 }
 
-.example-main-video-container{
+.example-main-video-container {
     display: flex;
     justify-content: center;
     margin: auto;
@@ -257,14 +264,14 @@
     border-radius: 12px;
 }
 
-.example-main-video{
+.example-main-video {
     width: 100%;
     border-radius: 12px;
-    border:none;
+    border: none;
 }
 
 
-.notes{
+.notes {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -278,28 +285,29 @@
     -ms-transform: rotate(-4deg);
     -o-transform: rotate(-4deg);
     margin: auto;
-    gap:23px;
+    gap: 23px;
     margin-top: 95px;
     background: #e9e9e9;
 }
 
 
-.notes-heading{
+.notes-heading {
     font-size: 30px;
     font-weight: 605;
     letter-spacing: -.04em;
     line-height: 95%;
     margin-top: 48px;
-    color:rgb(0, 0, 0)
+    color: rgb(0, 0, 0)
 }
 
-.notes-para{
+.notes-para {
     font-size: 22px;
     line-height: 33px;
     font-style: oblique;
-    color:rgb(0, 0, 0)
+    color: rgb(0, 0, 0)
 }
-.notes-pin{
+
+.notes-pin {
     color: #000000;
     font-size: 50px;
     font-weight: 600;
@@ -308,11 +316,11 @@
     -moz-transform: rotate(-320deg);
     -ms-transform: rotate(-320deg);
     -o-transform: rotate(-320deg);
-    
+
 }
 
 
-.templates-heading{
+.templates-heading {
     font-size: 70px;
     font-weight: 605;
     letter-spacing: -.04em;
@@ -324,21 +332,22 @@
 
 }
 
-.templates-link{
+.templates-link {
     color: #000000;
     font-weight: 600;
     font-size: 59px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.templates-link-container{
+
+.templates-link-container {
     display: flex;
     margin-top: 190px;
     width: 80%;
     margin: auto;
 }
 
-.notion-bottom-name{
+.notion-bottom-name {
     font-size: 40px;
     font-weight: 600;
     font-family: system-ui;
@@ -346,7 +355,7 @@
     margin-bottom: 20px;
 }
 
-.notion-bottom-try-button{
+.notion-bottom-try-button {
     padding: 10px 18px 10px 18px;
     background-color: #0582ff;
     border: none;
@@ -360,7 +369,7 @@
     color: white;
 }
 
-.notion-bottom-download-button{
+.notion-bottom-download-button {
     padding: 10px 18px 10px 18px;
     background: #f0efef;
     border-radius: 7px;
@@ -373,19 +382,20 @@
     font-weight: 600;
     color: #000000;
 }
-.notion-bottom-btns{
+
+.notion-bottom-btns {
     display: flex;
-    gap:12px
+    gap: 12px
 }
 
-.notion-bottom-pic{
+.notion-bottom-pic {
     width: 100%;
     margin-top: 50px;
     bottom: 0;
-    
+
 }
 
-.templates{
+.templates {
     display: flex;
     justify-content: space-between;
     gap: 20px;
@@ -394,7 +404,8 @@
     margin-bottom: 20px;
     width: 80%;
 }
-.templates-card{
+
+.templates-card {
     padding: 20px;
     border-radius: 12px;
     -webkit-border-radius: 12;
@@ -404,18 +415,230 @@
     border: 1px solid #dededb;
 }
 
-.footer{
+.footer {
     display: flex;
     justify-content: space-between;
-    
+
     width: 80%;
     margin: auto;
     margin-top: 120px;
 }
 
-.footer-para{
+.footer-para {
     width: 80%;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 20px;
+}
+
+
+#intro-building-blocks {
+    display: flex;
+    flex-direction: row;
+}
+
+.main-box-of-work-and-video {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+
+@media screen and (max-width: 992px) {
+    body {
+        /* background-color: blue; */
+    }
+
+    .intro-section {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        margin: auto;
+        align-items: center;
+    }
+
+    .intro-section-text {
+        width: 100%;
+        display: flex;
+        margin: auto;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+
+    }
+
+    .intro-section-text-children {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .intro-section-btns-trused-section {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .intro-section-video {
+        border: none;
+        width: 100%;
+        border-radius: 12px;
+        -webkit-border-radius: 12px;
+        -moz-border-radius: 12px;
+        -ms-border-radius: 12px;
+        -o-border-radius: 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .intro-section-video>video {
+        border: 1px solid #7a7a76;
+        border-radius: 16px;
+        -webkit-border-radius: 16px;
+        -moz-border-radius: 16px;
+        -ms-border-radius: 16px;
+        -o-border-radius: 16px;
+    }
+
+    .main-box-of-work-and-video {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .example-of-work-text {
+        display: flex;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .example-of-work-heading {
+        width: 100%;
+
+    }
+
+    .example-of-work-video-container {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 20px;
+    }
+
+    .templates {
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .header {
+        display: none;
+    }
+
+    .nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .nav-item {
+        width: fit-content;
+    }
+
+    .intro-section-heading {
+        text-align: center;
+    }
+
+    .intro-section-para {
+        text-align: center;
+
+    }
+
+    .intro-section-btns {
+        justify-content: center;
+    }
+
+
+}
+
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 600px) {
+    body {
+        /* background-color: olive; */
+    }
+
+    .intro-section-text-children {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .intro-section-video>video {
+        width: 90%;
+        height: 50%;
+        border: 1px solid #7a7a76;
+        border-radius: 16px;
+        -webkit-border-radius: 16px;
+        -moz-border-radius: 16px;
+        -ms-border-radius: 16px;
+        -o-border-radius: 16px;
+    }
+
+    .example-of-work-video-container>div {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .notes {
+        width: 85%;
+        height: 250px;
+    }
+
+    .templates {
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .header {
+        display: none;
+    }
+
+    .nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .nav-item {
+        width: fit-content;
+    }
+
+    .request-demo {
+        display: none;
+    }
+
+    .intro-section-heading {
+        text-align: center;
+    }
+
+    .intro-section-para {
+        text-align: center;
+
+    }
+
+    .intro-section-btns {
+        justify-content: center;
+    }
 }
